# turnin

./: .project  tests  turnin.cabal
src/: Main.hs
src/Domain/: Course.hs  Group.hs  Project.hs  ProjectRepo.hs  Repo.hs  Root.hs  SubmitRepo.hs  Term.hs  TrainFileRepo.hs  TrainRun.hs  TrainRunRepo.hs
src/Infrastructure/: CsvNode.hs  CvsNode.hs  Date.hs  Finder.hs  Node.hs  Persister.hs
src/Interface/: CommandLineLexicon.hs  CommandLineParser.hs  Lexicon.hs
src/Interface/CommandLineParser/: Config.hs  Course.hs  Group.hs  Project.hs  Repo.hs  SubmitWorktrain.hs  Term.hs  Utils.hs
src/Interface/CommandLineParser/Project/: Submit.hs  Validate.hs  Worktrain.hs
src/Security/: SecurityManager.hs
src/Service/: Accents.hs  AsciiArt.hs  AutomaticTermNames.hs  WorktrainOutputFormatter.hs
test/: IOTestUtils.hs  MainTest.hs  TestUtils.hs  UnitMainTest.hs
test/Domain/: GroupPropTest.hs  GroupTest.hs  GroupUnitTest.hs  HierarchyPropTest.hs  HierarchyTest.hs  HierarchyUnitTest.hs  ProjectHeirarchyTest.hs  ProjectHierarchyPropTest.hs  ProjectHierarchyTest.hs  ProjectHierarchyUnitTest.hs  ProjectPropTest.hs  ProjectTest.hs  ProjectUnitTest.hs  RootPropTest.hs  RootTest.hs  RootUnitTest.hs  TermPropTest.hs  TermTest.hs  TermUnitTest.hs
test/Infrastructure/: CsvNodePropTest.hs  CsvNodeTest.hs  CsvNodeUnitTest.hs  CvsNodeTest.hs  DatePropTest.hs  DateTest.hs  DateUnitTest.hs  FinderCompileTest.hs  FinderPropFindingTest.hs  FinderPropNoFindingTest.hs  FinderTest.hs  FinderUnitFindingTest.hs  FinderUnitNoFindingTest.hs  NodePropTest.hs  NodeTest.hs  NodeUnitTest.hs  PersisterPropTest.hs  PersisterUnitTest.hs
test/Infrastructure/Finder/: FinderCompileTest.hs  FinderPropFindingTest.hs  FinderPropNoFindingTest.hs  FinderPropTest.hs  FinderTestUtils.hs  FinderUnitFindingTest.hs  FinderUnitNoFindingTest.hs
test/Interface/: CommandLineParserTest.hs  CommandLineParserTestUtils.hs
test/Interface/CommandLineParser/: ConfigParserTest.hs  ConfigPropTest.hs  ConfigTest.hs  ConfigUnitTest.hs  CourseGroupParserTest.hs  CourseGroupPropTest.hs  CourseGroupTest.hs  CourseGroupUnitTest.hs  ParserTestUtils.hs  ProjectValidateParserTest.hs  ProjectValidatePropTest.hs  ProjectValidateTest.hs  ProjectValidateUnitTest.hs  ProjectWorktrainSubmitPropTest.hs  ProjectWorktrainSubmitTest.hs  ProjectWorktrainSubmitUnitTest.hs  RepoTermParserTest.hs  RepoTermPropTest.hs  RepoTermTest.hs  RepoTermUnitTest.hs  SubmitWorktrainPropTest.hs  SubmitWorktrainTest.hs  SubmitWorktrainUnitTest.hs  WorktrainSubmitTest.hs
test/Interface/CommandLineParserTest/: Utils.hs
test/Security/: CommandLineParserSecurityTest.hs
test/Service/: AutomaticTermNamesPropTest.hs  AutomaticTermNamesTest.hs  AutomaticTermNamesUnitTest.hs  WorktrainOutputFormatterPropTest.hs  WorktrainOutputFormatterTest.hs  WorktrainOutputFormatterUnitTest.hs
test/Service/Utils/: FormatterTestUtils.hs
