name:           turnin
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         antoine

executable turnin
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   optparse-applicative >=0.7.0 && <0.8,
                   containers >=0.4.2 && <0.5,
                   split >=0.2.2 && <0.3
  ghc-options:     -Wall -fno-warn-missing-signatures
  other-modules:
                   Interface.Lexicon,
                   Interface.CommandLineParser.Config,
                   Interface.CommandLineParser.Utils,
                   Interface.CommandLineParser.Repo,
                   Interface.CommandLineParser.Term,
                   Interface.CommandLineParser.Project.Validate,
                   Interface.CommandLineParser.Project.Worktrain,
                   Interface.CommandLineParser.Project.Submit,
                   Interface.CommandLineParser.SubmitWorktrain,
                   Infrastructure.Node,
                   Infrastructure.CsvNode,
                   Domain.Project

test-suite turnin-tests
  type:            exitcode-stdio-1.0
  main-is:         MainTest.hs
  ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures
  build-depends:
                   base >= 4, HTF > 0.9,
                   optparse-applicative >=0.7.0 && <0.8,
                   containers >=0.4.2 && <0.5,
                   split >=0.2.2 && <0.3
  hs-source-dirs:
                   src,
                   test
  other-modules:
                   Interface.Lexicon,
                   Interface.CommandLineParser.Config,
                   Interface.CommandLineParser.Repo,
                   Interface.CommandLineParser.Term,
                   Interface.CommandLineParser.Project.Validate,
                   Interface.CommandLineParser.ProjectWorktrainSubmitTest,
                   Interface.CommandLineParser.ParserTestUtils,
                   Interface.CommandLineParser.Project.Worktrain,
                   Interface.CommandLineParser.Project.Submit,
                   Interface.CommandLineParser.SubmitWorktrain,
                   Interface.CommandLineParser.SubmitWorktrainTest,
                   Infrastructure.NodeTest,
                   Infrastructure.Node,
                   Infrastructure.CsvNode,
                   Infrastructure.CsvNodeTest,
                   Domain.ProjectTest,
                   Domain.Project

